# fu_pro_class

./: .gitignore  README.md
.lsp/.cache/: db.transit.json
clojure/: README.md
clojure_app/: CHANGELOG.md  project.clj
haskell/: haskell-app.cabal
haskell/app/exercise/: uebung0.hs  uebung4.hs  uebung8.hs
haskell/app/exercise_test/: uebung0_test.hs
haskell/exercise/: uebung0.hs  uebung1.hs  uebung6.hs
haskell/uebung/: uebung0.hs  uebung1.hs  uebung2.hs  uebung3.hs  uebung5.hs  uebung7.hs
