cabal-version:      3.0

name:               haskell-app

version:            0.1.0.0

license:            MIT

license-file:       LICENSE

author:             Lera

maintainer:         mssolipsismus@gmail.com

build-type:         Simple

extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable haskell-app
    import:           warnings

    main-is:          Main.hs

    build-depends:    base ^>=4.19.0.0,


    hs-source-dirs:   app

    default-language: Haskell2010
